--- a/gerenc/.settings/org.eclipse.wst.common.component
+++ b/gerenc/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="manager">
+        
+    <wb-module deploy-name="gerenc">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="manager"/>
-        <property name="java-output-path" value="/manager/build/classes"/>
+                
+        <property name="java-output-path" value="/gerenc/build/classes"/>
+        <property name="context-root" value="gerenc"/>
+            
     </wb-module>
+    
 </project-modules>
